@@ -8,7 +8,7 @@
  = #endif
  = #endif
  =
- = #if defined(RHAPSODY) || defined(NEXT)
+ = #if defined(RHAPSODY)
  = #define ap_private_extern __private_extern__
  = #else
  = #define ap_private_extern
